--- a/.env
+++ b/.env
@@ -4,10 +4,17 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://rahul:luhar111999dotelQ!@weboecommerce-db-1234.mysql.database.azure.com:3306/weboecommerce"
-DB_USERNAME="rahul"
-DB_PASSWORD="luhar111999dotelQ!"
-DB_HOST="weboecommerce-db-1234.mysql.database.azure.com"
+# DATABASE_URL="mysql://rahul:luhar111999dotelQ!@weboecommerce-db-1234.mysql.database.azure.com:3306/weboecommerce"
+# DB_USERNAME="rahul"
+# DB_PASSWORD="luhar111999dotelQ!"
+#DB_HOST="weboecommerce-db-1234.mysql.database.azure.com"
+# DB_PORT="3306"
+# DB_NAME="weboecommerce"
+
+DATABASE_URL="mysql://root:letodluhar@localhost:3306/weboecommerce"
+DB_USERNAME="root"
+DB_PASSWORD="letodluhar"
+DB_HOST="localhost"
 DB_PORT="3306"
 DB_NAME="weboecommerce"
 
