--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/throttler": "^3.1.0",
     "@prisma/client": "^4.4.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.9",
@@ -31,8 +32,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^4.4.0",
     "reflect-metadata": "^0.1.13",
