--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@
 
 
 
-DATABASE_URL="mysql://root:letodluhar@localhost:3306/weboecommerce"
+DATABASE_URL="<mongoul>"
 DB_USERNAME="root"
-DB_PASSWORD="letodluhar"
+DB_PASSWORD="******"
 DB_HOST="localhost"
 DB_PORT="3306"
 DB_NAME="weboecommerce"
 
-SESSION_SECRET="vnfg984585hg3hf2ef3er3refwwqfrwfiwehfwihf"
-JWT_SECRET="ghtgyfh4675612hf64ghih68hgitk"
+SESSION_SECRET="**********************"
+JWT_SECRET="************************"
